# guide3d

./: .gitignore  MANIFEST.in  README.md  pyproject.toml
.github/workflows/: pages.yml
docs/: _config.yml  data_collection.md  index.md  installation.md  quick-start.md  usage.md
docs/assets/js/: mathjax-script-type.js  mathtex-script-type.js
scripts/: make_annotation_file.py  make_annotation_file_2.py  make_video.py
src/guide3d/: utils.py
src/guide3d/dataset/: dataset_utils.py  segment.py
src/guide3d/dataset/image/: b_spline.py  bezier.py  cubic.py  points.py  pts.py  segment.py  spline.py
src/guide3d/dataset/video/: b_spline.py  spline.py
src/guide3d/representations/: curve.py
src/guide3d/utils/: plot.py  utils.py  viz.py
tests/: test_quickstart.py
